Rename Mitsuba/appleseed comparison to Tungsten/appleseed

--- a/stuff/tungsten-comparison/index.html
+++ b/stuff/tungsten-comparison/index.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0060)file:///D:/cg/appleseed/scenes/tungsten%20scenes/report.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         
-        <title>Mitsuba/appleseed Comparison</title>
+        <title>Tungsten/appleseed Comparison</title>
         <script src="./index_files/jquery.min.js.download"></script>
         <script>
             function makeImageComparator(container) {
